tests/rosetta/out/Rust/animation.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    let msg = "Hello World! ";
    let mut shift = 0;
    let mut inc = 1;
    let mut clicks = 0;
    let mut frames = 0;
    while clicks < 5 {
        let mut line = String::new();
        let mut i = 0;
        while i < msg.len() as i32 {
            let idx = (shift + i) % msg.len() as i32;
            line += &msg[idx as usize..idx + 1 as usize];
            i += 1;
        }
        println!("{}", vec![format!("{}", line)].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
        shift = (shift + inc) % msg.len() as i32;
        frames += 1;
        if frames % msg.len() as i32 == 0 {
            inc = msg.len() as i32 - inc;
            clicks += 1;
        }
    }
}
